--- a/AnyoneCanFish/app/src/main/res/menu/menu_main.xml
+++ b/AnyoneCanFish/app/src/main/res/menu/menu_main.xml
@@ -1,15 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MapsActivity">
+    tools:context="com.homebrewforlife.sharkydart.anyonecanfish.MainActivity">
     <item
         android:id="@+id/action_open_settings"
         android:orderInCategory="1"
-        android:title="@string/menu_settings"
+        android:title="@string/mainmenu_settings"
         />
     <item
         android:id="@+id/action_firebase_signout"
         android:orderInCategory="2"
-        android:title="@string/menu_signout"
+        android:title="@string/mainmenu_signout"
         />
 </menu>
