--- a/AnyoneCanFish/app/src/main/res/values/styles.xml
+++ b/AnyoneCanFish/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <!-- Base application theme. -->
+     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -8,8 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="Theme.AnyoneCanFish" parent="@style/Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/paper_500</item>
+    <style name="Theme.AnyoneCanFish" parent="@style/Widget.MaterialComponents.CardView">
+        <item name="cardBackgroundColor">@color/paper_500</item>
         <item name="colorPrimaryDark">@color/paper_700</item>
         <item name="colorAccent">@color/ink_a200</item>
     </style>
@@ -21,5 +21,10 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
 
 </resources>
