--- a/AnyoneCanFish/app/src/main/res/layout/fragment_weather_data.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/fragment_weather_data.xml
@@ -20,6 +20,7 @@
             android:background="@color/paper_500"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             tools:context=".DaysFragment"
-            tools:listitem="@layout/fragment_day" />
+            tools:listitem="@layout/fragment_day"
+            />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
