--- a/AnyoneCanFish/app/src/main/res/values/dimens.xml
+++ b/AnyoneCanFish/app/src/main/res/values/dimens.xml
@@ -10,4 +10,8 @@
 
     <dimen name="list_side_margin">4dp</dimen>
     <dimen name="list_toolbar_side_margin">0dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
+
+    <dimen name="navicon_size">26dp</dimen>
 </resources>
