--- a/AnyoneCanFish/app/src/main/res/layout/activity_main.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,12 @@
                 android:layout_marginEnd="@dimen/list_toolbar_side_margin"
                 app:layout_scrollFlags="scroll|enterAlways">
                 <ImageView
+                    android:layout_width="@dimen/navicon_size"
+                    android:layout_height="@dimen/navicon_size"
+                    android:layout_gravity="start|center_vertical"
+                    android:src="@drawable/fish_icon_001"
+                    android:contentDescription="@string/app_name" />
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -47,6 +53,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_info" />
+        app:srcCompat="@android:drawable/ic_input_add" />
 
 </android.support.design.widget.CoordinatorLayout>
