--- a/AnyoneCanFish/app/src/main/res/values/colors.xml
+++ b/AnyoneCanFish/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#2c8500</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#8b6e52</color>
 
     <color name="photo_placeholder">#b9679a</color>
     <color name="paper_300">#ded0a5</color>
@@ -10,4 +10,8 @@
     <color name="paper_700">#8b6e52</color>
     <color name="ink_a200">#564c80</color>
     <color name="ink_a800">#2b205c</color>
+
+    <color name="scrim_start">#00000000</color>
+    <color name="scrim_center">#00000000</color>
+    <color name="scrim_end">#4d000000</color>
 </resources>
