--- a/AnyoneCanFish/app/src/main/res/layout/rv_content_game_fish.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/rv_content_game_fish.xml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.card.MaterialCardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="2dp"
     app:cardCornerRadius="0dp"
     app:cardElevation="2dp"
-    android:id="@+id/mcrvGameFish"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/llrvGameFish"
+    >
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <FrameLayout
-            android:id="@+id/flrvGameFish"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -29,7 +26,8 @@
                 android:scaleType="centerCrop"
                 android:contentDescription="@string/content_fish_image"
                 />
-            <view
+            <View
+                android:id="@drawable/scrim"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/scrim"/>
@@ -39,14 +37,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/text_margin"
-                android:textAppearance="?attr/textAppearanceListItem"
                 tools:text="fish species"/>
         </FrameLayout>
 
         <TextView
             android:id="@+id/tvFishInformation"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:textAppearance="?attr/textAppearanceListItem"
             tools:text="fish information"/>
