--- a/AnyoneCanFish/app/src/main/res/layout/fragment_main.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivityFragment"
     tools:showIn="@layout/activity_main"
     android:background="@color/paper_300">
 
@@ -22,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <FrameLayout
-            android:id="@+id/weatherDataFrameLayout"
+            android:id="@+id/fl_weatherData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
