--- a/AnyoneCanFish/app/src/main/res/values/colors.xml
+++ b/AnyoneCanFish/app/src/main/res/values/colors.xml
@@ -11,7 +11,17 @@
     <color name="ink_a200">#564c80</color>
     <color name="ink_a800">#2b205c</color>
 
+    <color name="sun_300">#dfbfa4</color>
+    <color name="sun_500">#dcac84</color>
+    <color name="sun_700">#d9955c</color>
+    <color name="moon_300">#99a6af</color>
+    <color name="moon_500">#849eaf</color>
+    <color name="moon_700">#5888a9</color>
+
     <color name="scrim_start">#00000000</color>
     <color name="scrim_center">#00000000</color>
     <color name="scrim_end">#4d000000</color>
+
+    <color name="white_ish">#7fffffff</color>
+    <color name="black_ish">#7f000000</color>
 </resources>
